# MS-Teams-Docs-Diff-Bot

./: LICENSE  README.md  pyproject.toml
ms_teams_bot/: crawler.py  main.py  url_getter.py
