[tool.poetry]
name = "ms-teams-bot"
version = "0.1.0"
description = ""
authors = ["Neill Killgore <nkillgore@gmail.com>"]
readme = "README.md"
packages = [{include = "ms_teams_bot"}]

[tool.poetry.dependencies]
python = "^3.11"
beautifulsoup4 = "^4.12.2"
requests = "^2.31.0"
mypy = "^1.5.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
